--- a/src/cgi/Makefile
+++ b/src/cgi/Makefile
@@ -1,10 +1,10 @@
+SRC = login.pl retrieveXML.pl strainReport.pl blastReport.pl \
+      batchReport.pl gelReport.pl seqReport.pl retrieveXML.pl \
+      chromatReport.pl
 
-SRC = login.pl retrieveXML.pl strainReport.pl blastReport.pl
-
-WEBCGIDIR = /www/weasel_94/cgi-bin/pelement
-
-webinstall: $(SRC)
-	for I in $?; do (cp $$I $(WEBCGIDIR) ); done
+install: check
+	for I in $(SRC); do (/bin/sed -e '1s/-I\.\./-I$(SEDINSTALLDIR)/' $$I > $(INSTALLDIR)/$$I ); done
+	for I in $?; do (cp $$I $(INSTALLDIR) ); done
 
 check:	$(SRC) 
 	for I in $?; do ( perl -c $$I ); done
