incremental checkin of minor changes

--- a/src/modules/Makefile
+++ b/src/modules/Makefile
@@ -1,22 +1,17 @@
+SRC =   Alignment.pm Lane.pm AlignmentSet.pm LaneSet.pm Association.pm \
+	Ligation.pm Batch.pm LigationSet.pm BlastInterface.pm PCommon.pm \
+	Blast_HSP.pm Pelement.pm Blast_Hit.pm PelementCGI.pm Blast_Report.pm \
+	PelementDBI.pm Blast_ReportSet.pm PhredInterface.pm Blast_Run.pm \
+	Phred_Qual.pm DbObject.pm Phred_Seq.pm DbObjectSet.pm Sample.pm SampleSet.pm\
+	Digestion.pm Seq.pm DigestionSet.pm SeqSet.pm Files.pm Seq_Alignment.pm \
+	Gadfly_Syn.pm Seq_AlignmentSet.pm Gel.pm Sequence.pm GelSet.pm Session.pm \
+	GenBankScaffold.pm Strain.pm IPCR.pm WebSession.pm IPCRSet.pm Seq_Assembly.pm
 
-SRC = Alignment.pm AlignmentSet.pm Association.pm BlastInterface.pm \
-	Blast_HSP.pm Blast_Hit.pm Blast_Report.pm Blast_ReportSet.pm \
-	Blast_Run.pm DbObject.pm DbObjectSet.pm Files.pm Gel.pm \
-	Lane.pm PCommon.pm Pelement.pm PelementCGI.pm PelementDBI.pm \
-	PhredInterface.pm Seq.pm Sequence.pm Session.pm Strain.pm \
-	WebSession.pm Phred_Seq.pm Phred_Qual.pm
 
-WEBMODULES = Pelement.pm PCommon.pm WebSession.pm PelementDBI.pm Session.pm \
-             PelementCGI.pm
-
-WEBMODDIR = /www/weasel_94/cgi-bin/modules/
-
-webinstall: $(WEBMODULES)
-	for I in $?; do (cp $$I $(WEBMODDIR) ); done
+install: check
+	for I in $(SRC); do ( cp $$I $(INSTALLDIR)/modules ); done
 
 
 check:	$(SRC) 
 	for I in $?; do ( perl -c $$I ); done
 	touch check
-
-
