--- a/src/cgi/Makefile
+++ b/src/cgi/Makefile
@@ -1,10 +1,10 @@
 SRC = login.pl retrieveXML.pl strainReport.pl blastReport.pl \
       batchReport.pl gelReport.pl seqReport.pl retrieveXML.pl \
-      chromatReport.pl
+      chromatReport.pl statusReport.pl assemblyReport.pl phenoReport.pl \
+      seqStatusReport.pl
 
 install: check
-	for I in $(SRC); do (/bin/sed -e '1s/-I\.\./-I$(SEDINSTALLDIR)/' $$I > $(INSTALLDIR)/$$I ); done
-	for I in $?; do (cp $$I $(INSTALLDIR) ); done
+	for I in $(SRC); do (/bin/sed -e '1s/-I\.\./-I$(SEDINSTALLDIR)/' $$I > $(INSTALLDIR)/$$I; chmod +x $(INSTALLDIR)/$$I ); done
 
 check:	$(SRC) 
 	for I in $?; do ( perl -c $$I ); done
