--- a/src/cgi/Makefile
+++ b/src/cgi/Makefile
@@ -1,7 +1,7 @@
 SRC = login.pl retrieveXML.pl strainReport.pl blastReport.pl \
       batchReport.pl gelReport.pl seqReport.pl retrieveXML.pl \
       chromatReport.pl strainStatusReport.pl assemblyReport.pl phenoReport.pl \
-      seqStatusReport.pl
+      seqStatusReport.pl recheckReport.pl
 
 install: check
 	for I in $(SRC); do (/bin/sed -e '1s:-I\.\.:-I$(INSTALLDIR):' $$I > $(INSTALLDIR)/$$I; chmod +x $(INSTALLDIR)/$$I ); done
