install modules as well

--- a/src/cgi/Makefile
+++ b/src/cgi/Makefile
@@ -3,8 +3,11 @@ SRC = login.pl retrieveXML.pl strainReport.pl blastReport.pl \
       chromatReport.pl strainStatusReport.pl assemblyReport.pl phenoReport.pl \
       seqStatusReport.pl recheckReport.pl
 
-install: check
+install: check module_install
 	for I in $(SRC); do (/bin/sed -e '1s:-I\.\.:-I$(INSTALLDIR):' $$I > $(INSTALLDIR)/$$I; chmod +x $(INSTALLDIR)/$$I ); done
+
+module_install:
+	cd ../modules ; INSTALLDIR=$(INSTALLDIR) make install
 
 check:	$(SRC) 
 	for I in $?; do ( perl -c $$I ); done
