--- a/src/cgi/Makefile
+++ b/src/cgi/Makefile
@@ -1,7 +1,12 @@
-SRC = login.pl retrieveXML.pl strainReport.pl blastReport.pl \
-      batchReport.pl gelReport.pl seqReport.pl retrieveXML.pl \
+SRC = pelement.pl \
+      login.pl logout.pl \
+      strainReport.pl blastReport.pl batchReport.pl gelReport.pl seqReport.pl \
       chromatReport.pl strainStatusReport.pl assemblyReport.pl phenoReport.pl \
-      seqStatusReport.pl recheckReport.pl hitMaker.pl seqTrimmer.pl setReport.pl
+      setReport.pl seqStatusReport.pl recheckReport.pl \
+      retrieveXML.pl hitMaker.pl seqTrimmer.pl seqDownload.pl \
+      batchRegister.pl digRegister.pl ligRegister.pl ipcrRegister.pl \
+      seqRegister.pl sampleSheet.pl todoList.pl \
+      font.pl regionReport.pl msieRegionReport.pl regionImage.pl  recentBatches.pl
 
 IMG = images/2L.png images/2R.png images/3L.png images/3R.png \
       images/4.png images/X.png images/left.png images/left2.png \
