--- a/src/modules/Makefile
+++ b/src/modules/Makefile
@@ -16,7 +16,7 @@ SRC =	Alignment.pm AlignmentSet.pm Association.pm Batch.pm BatchSet.pm \
 	Stock_RecordSet.pm Strain.pm Strain_Alias.pm Submitted_Seq.pm \
 	Trimming_Protocol.pm Vector.pm WebCache.pm WebSession.pm \
         SQLObject.pm SQLObjectSet.pm ChadoGeneModelSet.pm GeneModelSet.pm \
-	Phase.pm PhaseSet.pm \
+	Phase.pm PhaseSet.pm StrainSet.pm \
  	RegionImage.pm fasta_extract.pm
 
 install: check
