add old set report for comparison

--- a/src/cgi/Makefile
+++ b/src/cgi/Makefile
@@ -6,7 +6,8 @@ SRC = pelement.pl \
       retrieveXML.pl hitMaker.pl seqTrimmer.pl seqDownload.pl \
       batchRegister.pl digRegister.pl ligRegister.pl ipcrRegister.pl \
       seqRegister.pl sampleSheet.pl todoList.pl \
-      font.pl regionReport.pl msieRegionReport.pl regionImage.pl  recentBatches.pl
+      font.pl regionReport.pl msieRegionReport.pl regionImage.pl  recentBatches.pl \
+      oldSetReport.pl
 
 IMG = images/2L.png images/2R.png images/3L.png images/3R.png \
       images/4.png images/X.png images/left.png images/left2.png \
