--- a/src/Makefile
+++ b/src/Makefile
@@ -19,39 +19,39 @@ CSS = $(shell cd "$(SRCDIR)" && find html -name '*.css')
 check: scriptcheck cgicheck
 
 scriptcheck: modulecheck
-	cd "$(SRCDIR)" && \
+	@cd "$(SRCDIR)" && \
 	for I in $(PERL_SCRIPTS); do test -e .scriptcheck -a .scriptcheck -nt "$$I" || perl -c "$$I" --installdeps; done && \
 	touch .scriptcheck
 
 cgicheck: modulecheck
-	cd "$(SRCDIR)" && \
+	@cd "$(SRCDIR)" && \
 	for I in $(PERL_CGI); do test -e .cgicheck -a .cgicheck -nt "$$I" || perl -c "$$I" --installdeps; done && \
 	touch .cgicheck
 
 modulecheck:
-	cd "$(SRCDIR)" && \
+	@cd "$(SRCDIR)" && \
 	for I in $(PERL_MODULES); do test -e .modulecheck -a .modulecheck -nt "$$I" || perl -Imodules -c "$$I" --installdeps; done && \
 	touch .modulecheck
 
 webinstall: cgiinstall htmlinstall jsinstall
 cgiinstall: cgicheck
-	test "$(WEBINSTALLDIR)" != ""
-	cd "$(SRCDIR)" && \
+	@test "$(WEBINSTALLDIR)" != ""
+	@cd "$(SRCDIR)" && \
 	for I in $(PERL_CGI) ; do mkdir -p "$(WEBINSTALLDIR)" && cp -v "$$I" "$(WEBINSTALLDIR)"; done && \
 	for I in $(PERL_MODULES) ; do mkdir -p "$(WEBINSTALLDIR)/$$(dirname "$$I")" && cp -v "$$I" "$(WEBINSTALLDIR)/$$I"; done
 jsinstall:
-	test "$(HTMLINSTALLDIR)" != ""
-	cd "$(SRCDIR)" && \
+	@test "$(HTMLINSTALLDIR)" != ""
+	@cd "$(SRCDIR)" && \
 	for I in $(JAVASCRIPT) ; do mkdir -p "$(HTMLINSTALLDIR)" && cp -v "$$I" "$(HTMLINSTALLDIR)"; done
 htmlinstall:
-	test "$(HTMLINSTALLDIR)" != ""
-	cd "$(SRCDIR)" && \
+	@test "$(HTMLINSTALLDIR)" != ""
+	@cd "$(SRCDIR)" && \
 	for I in $(IMAGES) ; do mkdir -p "$(HTMLINSTALLDIR)/images" && cp -v "$$I" "$(HTMLINSTALLDIR)/images"; done && \
 	for I in $(CSS) ; do mkdir -p "$(HTMLINSTALLDIR)" && cp -v "$$I" "$(HTMLINSTALLDIR)"; done
 
 install: scriptcheck
-	test "$(INSTALLDIR)" != ""
-	cd "$(SRCDIR)" && \
+	@test "$(INSTALLDIR)" != ""
+	@cd "$(SRCDIR)" && \
 	for I in $(PERL_SCRIPTS) ; do mkdir -p "$(INSTALLDIR)/scripts" && cp -v "$$I" "$(INSTALLDIR)/scripts"; done && \
 	for I in $(PERL_MODULES) ; do mkdir -p "$(INSTALLDIR)/$$(dirname "$$I")" && cp -v "$$I" "$(INSTALLDIR)/$$I"; done
 
